# live_assist_mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  server.py  setup.sh
claude-voice/: claude-voice  package.json
claude-voice/src/: asr-client.ts  index.ts  metadata.ts  mic.ts  speaker-tracker.ts  text-metadata.ts
hooks/: prompt-submit.py  session-start.py  shared.py
