[project]
name = "whissle-mcp"
version = "0.1.0"
description = "Whissle Live Assist MCP Server — personal AI context for Cursor & Claude Desktop"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]
