[project]
name = "lulu-claude"
version = "0.1.0"
description = "Lulu — personal AI middleware for Claude Code, Cursor & Claude Desktop"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]
